turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:5: error: STOP is already defined as value STOP
val STOP=0
    ^Turmite:5: error: STOP  is already defined as value STOP
val STOP=0
    ^